third_party/blink/renderer/core/layout/layout_object.cc
@@ -1867,7 +1867,7 @@ StyleDifference LayoutObject::AdjustStyleDifference(
         (IsText() && !IsBR() && ToLayoutText(this)->HasTextBoxes()) ||
         (IsSVG() && StyleRef().SvgStyle().IsFillColorCurrentColor()) ||
         (IsSVG() && StyleRef().SvgStyle().IsStrokeColorCurrentColor()) ||
-        IsListMarker())
+        IsListMarker() || IsDetailsMarker())
       diff.SetNeedsPaintInvalidationObject();
   }
 
